wrapping up and fixing rerendering bugs

--- a/src/css/color.css
+++ b/src/css/color.css
@@ -1,6 +1,5 @@
 h1 {
     box-sizing: border-box;
-    background: blue;
     padding: 1em;
     color: white;
 }
